--- a/training_args.yaml
+++ b/training_args.yaml
@@ -1,11 +1,10 @@
-Qwen/Qwen1.5-0.5B:
+microsoft/Phi-3-mini-4k-instruct:
   per_device_train_batch_size: 1
-  gradient_accumulation_steps: 8
-  num_train_epochs: 1
-  lora_rank: 8
-  lora_alpha: 16
-  lora_dropout: 0.1
-
+  gradient_accumulation_steps: 1
+  num_train_epochs: 0.1
+  lora_rank: 1
+  lora_alpha: 
+  lora_dropout: 0.05
 Qwen/Qwen1.5-1.8B:
   per_device_train_batch_size: 1
   gradient_accumulation_steps: 8
