--- a/training_args.yaml
+++ b/training_args.yaml
@@ -1,4 +1,4 @@
-microsoft/Phi-3-mini-4k-instruct:
+microsoft/Phi-3.5-mini-instruct:
   per_device_train_batch_size: 1
   gradient_accumulation_steps: 1
   num_train_epochs: 0.1
